[package]
name = "libsqlite3_turso"
version = "0.1.0"
edition = "2021"


[lib]
name = "sqlite3"
crate-type = ["cdylib"]

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.12.9", features = ["json", "blocking", "gzip"] }
num_cpus = "1.17.0"
